Tue Dec 24 23:20:38 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/fileutils/fileasserts.rb (assert_ownership_user): new
	  assertion for user ownership.

	* test/fileutils/test_fileutils.rb (test_chown_error),
	  (test_chown_without_permission, test_chown_with_root):
	  based on the patch by vajrasky (Vajrasky Kok) at
	  [ruby-core:59298].  [Feature #9292]

Tue Dec 24 16:28:05 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* proc.c (rb_mod_define_method): consider visibility only if self
	  in the caller is same as the receiver, otherwise make public as
	  well as old behavior.  [ruby-core:57747] [Bug #9005]
	  [ruby-core:58497] [Bug #9141]

	* vm.c (rb_vm_cref_in_context): return ruby level cref if self is
	  same.

Tue Dec 24 14:13:14 2013  Koichi Sasada  <ko1@atdot.net>

	* README.EXT: add a refer to URL.

Tue Dec 24 13:48:45 2013  Koichi Sasada  <ko1@atdot.net>

	* README.EXT: add a document about RGenGC.
	  Reviewed by havenwood.
	  [misc #8962]

	* README.EXT.ja: ditto.

Tue Dec 24 12:11:43 2013  Koichi Sasada  <ko1@atdot.net>

	* include/ruby/ruby.h (RARRAY_ASET): try to avoid compiler warning.
	  [Bug #9287]

Tue Dec 24 05:04:56 2013  NAKAMURA Usaku  <usa@ruby-lang.org>

	* test/fileutils/test_fileutils.rb (setup): should not call
	  Process.groups for Windows.  get rid of many errors introduced by
	  r44364.

Mon Dec 23 18:37:16 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/fileutils/fileasserts.rb (assert_ownership_group): new
	  assertion for group ownership.

	* test/fileutils/test_fileutils.rb (test_chown{,_verbose,_noop}):
	  based on the patch by vajrasky (Vajrasky Kok) at
	  [ruby-core:59281].  [Feature #9286]

Mon Dec 23 15:53:45 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* hash.c (HAS_EXTRA_STATES): warn extra states only when something
	  differ.  [ruby-core:59254] [Bug #9275]

Mon Dec 23 12:42:13 2013  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* array.c: Have to_h raise on elements that are not key-value pairs